{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 79,
  "lineage": "939f639d-44f5-487f-d2a1-4b59118cd5f3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ip-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb1e8b034a6b3d15",
            "association_id": "eipassoc-05e9e16108318af75",
            "domain": "vpc",
            "id": "eipalloc-0bb1e8b034a6b3d15",
            "instance": "i-0638377992a54ff13",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-01a894a75b8aad732",
            "private_dns": "ip-10-0-50-115.eu-west-1.compute.internal",
            "private_ip": "10.0.50.115",
            "public_dns": "ec2-108-128-180-169.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.180.169",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.ingress-http-test",
            "aws_security_group.ingress-https-test",
            "aws_security_group.ingress-ssh-test",
            "aws_spot_instance_request.test_worker",
            "aws_subnet.subnet-test-spot",
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test-env-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:internet-gateway/igw-0580b7eb754784aea",
            "id": "igw-0580b7eb754784aea",
            "owner_id": "522192775665",
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "dependencies": [
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table-test-env",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:route-table/rtb-09b45d3a6af0f6d40",
            "id": "rtb-09b45d3a6af0f6d40",
            "owner_id": "522192775665",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0580b7eb754784aea",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1799c745d68d76e",
            "route_table_id": "rtb-09b45d3a6af0f6d40",
            "subnet_id": "subnet-081fd305d731d38ba"
          },
          "dependencies": [
            "aws_internet_gateway.test-env-gw",
            "aws_route_table.route-table-test-env",
            "aws_subnet.subnet-test-spot",
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-http-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:security-group/sg-0d241e2c930fd04e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d241e2c930fd04e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-http-sg",
            "name_prefix": "",
            "owner_id": "522192775665",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-https-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:security-group/sg-007c338437f064cd0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007c338437f064cd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-https-sg",
            "name_prefix": "",
            "owner_id": "522192775665",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress-ssh-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:security-group/sg-026ecd7055686421e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026ecd7055686421e",
            "ingress": [
              {
                "cidr_blocks": [
                  "79.116.135.184/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "522192775665",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-test-spot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:subnet/subnet-081fd305d731d38ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fd305d731d38ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "522192775665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06f5ac4ee4fa2a6a5"
          },
          "dependencies": [
            "aws_vpc.test-spot"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-spot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:522192775665:vpc/vpc-06f5ac4ee4fa2a6a5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09bb807a8badf57c0",
            "default_route_table_id": "rtb-0389c7e1b9f5bb538",
            "default_security_group_id": "sg-0f16fe1f6589211b4",
            "dhcp_options_id": "dopt-0cd8896a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06f5ac4ee4fa2a6a5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0389c7e1b9f5bb538",
            "owner_id": "522192775665"
          }
        }
      ]
    }
  ]
}